# robot-dance-instructor

./: .gitignore  CMakeLists.txt  README.md  config.yml  define_move.py  environment.yml  execute_moves.py  plot_log.py  process_moves.py  run_detection.py  run_interpolation.py  run_interpolator.py  run_mediapipe.py  save_history.py  save_history_only.py  save_moves.py  setup.py  test.py  test_mediapipe.py  test_mediapipe_osx.py  test_openpose.py  test_realsense.py  test_transition.py
01-teleop/: CMakeLists.txt  README.md  controller.cpp  controller_relative.cpp  data.txt  data2.txt  panda_arm.urdf  pose_commands.py  redis_keys.h  simviz.cpp  world.urdf
instructor/detection/: __init__.py  detector.py  tracker.py
instructor/mapping/: interpolator.py
instructor/moves/: interpolation.py  moves.py
instructor/speech/: README.md  engine.py  prompt.py  requirements.txt
instructor/utils/: __init__.py  config.py  log.py  redis.py
models/mmp_panda/: mmp_panda.urdf
models/panda/: panda_arm_hand.urdf
recordings/: history.txt
run/: define_move.py  execute_moves.py  process_speech.py  run_detection.py  save_history.py  save_moves.py
src/: camera.py  detector.py  interpolator.py  utils.py
tests/: plot_move.py  test_camera.py  test_interpolation.py
